# place_detection_isl

./: CMakeLists.txt  LICENSE  README.MD  cloudy.launch  cloudy.launch~  cloudy2.launch  cloudyhist.launch  cloudyhist.launch~  ii_cloudy.launch~  ii_night2nd.launch~  ii_sunny2nd.launch~  launchFile_Original  maddern_cloudy.launch~  maddern_sunny2.launch~  manifest.xml~  night.launch  night.launch~  night2.launch  night2.launch~  night2hist.launch  night2nd.launch~  night3.launch~  night_ii.launch~  orgi.launch~  package.xml  placedetection.launch~  placedetection2ndvisit.launch~  placedetectionPreviousMemory.launch~  placedetection_night_ii.launch~  runAll.launch  sunny.launch  sunny.launch~  sunny2.launch  sunny2.launch~  sunny2hist.launch  sunny2hist.launch~  sunny2nd.launch~  sunny_ii.launch~  test.launch
Freiburg/Gamma Launch/: fr_gamma_cloudy.launch  fr_gamma_cloudy.launch~  fr_gamma_night.launch  fr_gamma_night.launch~  fr_gamma_sunny.launch  fr_gamma_sunny.launch~
Freiburg/Histogram Equalization Launch/: fr_hist_cloudy.launch  fr_hist_cloudy.launch~  fr_hist_night.launch  fr_hist_night.launch~  fr_hist_night3.launch  fr_hist_sunny.launch  fr_hist_sunny.launch~  fr_hist_sunny2.launch  fr_histeq_cloudy.launch  fr_histeq_night.launch  fr_histeq_sunny.launch  freiburg_hist_cloudy.launch
Freiburg/Maddern Launch/: fr_maddern_cloudy.launch  fr_maddern_cloudy.launch~  fr_maddern_night.launch  fr_maddern_night.launch~  fr_maddern_night3.launch  fr_maddern_sunny.launch  fr_maddern_sunny.launch~  fr_maddern_sunny2.launch  freiburg_maddern_cloudy.launch  freiburg_maddern_night3.launch  maddern_cloudy.launch~  maddern_sunny2.launch~
Freiburg/Original Launch/: cloudy.launch~  fr_cloudy.launch  fr_cloudy.launch~  fr_night.launch  fr_night.launch~  fr_sunny.launch  fr_sunny.launch~  freiburg_cloudy.launch  freiburg_cloudy.launch~
Freiburg/Proposed Launch/: fr_prop_cloudy.launch  fr_prop_night.launch  fr_prop_sunny.launch
Freiburg/Shakeri Launch/: fr_shakeri_cloudy.launch  fr_shakeri_cloudy.launch~  fr_shakeri_night.launch  fr_shakeri_night.launch~  fr_shakeri_sunny.launch  fr_shakeri_sunny.launch~  shakeri_cloudy.launch~  shakeri_night3.launch~
Freiburg/VV Launch/: fr_vv_cloudy.launch  fr_vv_cloudy.launch~  fr_vv_night.launch  fr_vv_night.launch~  fr_vv_sunny.launch
Freiburg/VVGamma Launch/: fr_vv_cloudy.launch~  fr_vv_night.launch~  fr_vvgamma_cloudy.launch~  fr_vvgamma_night.launch  fr_vvgamma_night.launch~  fr_vvgamma_sunny.launch  fr_vvgamma_sunny.launch~
Freiburg/gammaDCT Launch/: fr_gammadct_cloudy.launch  fr_gammadct_cloudy.launch~  fr_gammadct_night.launch  fr_gammadct_night.launch~  fr_gammadct_sunny.launch  fr_gammadct_sunny.launch~  fr_gdct_cloudy.launch  fr_gdct_night.launch  fr_gdct_sunny.launch
Freiburg/logDCT Launch/: logdct_cloudy.launch  logdct_night3.launch  logdct_sunny2.launch
Ljubljana/Histogram Equalization Launch/: hist_sunny2.launch~  lj_histeq_cloudy.launch  lj_histeq_night.launch  lj_histeq_sunny.launch
Ljubljana/Maddern Launch/: lj_maddern_cloudy.launch  lj_maddern_night.launch  lj_maddern_sunny.launch  maddern_night3.launch~
Ljubljana/Original Launch/: lj_cloudy.launch  lj_night.launch  lj_night3.launch  lj_night3.launch~  lj_sunny.launch  lj_sunny2.launch  lj_sunny2.launch~  night3.launch~
Ljubljana/Proposed Launch/: lj_prop_cloudy.launch  lj_prop_night.launch  lj_prop_sunny.launch
Ljubljana/Shakeri Launch/: lj_shakeri_cloudy.launch  lj_shakeri_night.launch  lj_shakeri_sunny.launch
Ljubljana/gammaDCT Launch/: lj_gdct_cloudy.launch  lj_gdct_night.launch  lj_gdct_sunny.launch
New College/Histogram Equalization Launch/: hist_cloudy.launch~  nc_histeq_cloudy.launch  nc_histeq_night.launch  nc_histeq_sunny.launch
New College/Maddern Launch/: nc_maddern_cloudy.launch  nc_maddern_night.launch  nc_maddern_sunny.launch
New College/Original Launch/: nc_cloudy.launch  nc_night.launch  nc_sunny.launch  nc_sunny2.launch
New College/Shakeri Launch/: nc_shakeri_cloudy.launch  nc_shakeri_night.launch  nc_shakeri_sunny.launch  shakeri_cloudy.launch
Saarbrucken/Histogram Equalization Launch/: sa_histeq_cloudy.launch  sa_histeq_night.launch  sa_histeq_sunny.launch
Saarbrucken/Maddern Launch/: sa_maddern_cloudy.launch  sa_maddern_night.launch  sa_maddern_sunny.launch
Saarbrucken/Original Launch/: sa_cloudy.launch  sa_night.launch  sa_sunny.launch
Saarbrucken/Proposed Launch/: sa_prop_cloudy.launch  sa_prop_night.launch  sa_prop_sunny.launch
Saarbrucken/Shakeri Launch/: sa_shakeri_cloudy.launch  sa_shakeri_night.launch  sa_shakeri_sunny.launch
Saarbrucken/gammaDCT Launch/: sa_gdct_cloudy.launch  sa_gdct_night.launch  sa_gdct_sunny.launch
Saarbrücken/Histogram Equalization Launch/: sa_hist_night3.launch
Saarbrücken/Maddern Launch/: sa_maddern_sunny2.launch
Saarbrücken/Original Launch/: sa_cloudy.launch  sa_cloudy.launch~  sa_night3.launch  sa_sunny2.launch  sa_sunny2.launch~
Saarbrücken/Shakeri Launch/: sa_shakeri_sunny2.launch  shakeri_sunny2.launch~
placeDetectionBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  placeDetectionISL.cbp
placeDetectionBuild/src/database/: moc_databasemanager.cxx
src/: Utility.cpp  Utility.cpp.autosave  Utility.h  detection_main.cpp  main.cpp  main.cpp~
src/Utility/: BasePoint.cpp  BasePoint.h  Place.cpp  Place.h  PlaceDetector.cpp  PlaceDetector.h  TemporalWindow.cpp  TemporalWindow.h
src/bubble/: bubbleprocess.cpp  bubbleprocess.h  dfc.cpp  invariants.cpp
src/database/: databasemanager.cpp  databasemanager.h
src/imageprocess/: imageprocess.cpp  imageprocess.h
