<?xml version="1.0"?>
<package>
  <name>place_detection_isl</name>
  <version>0.0.0</version>
  <description>place_detection_isl</description>

  <maintainer email="hakan.karaoguz@boun.edu.tr">Hakan Karaoguz</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/islboun</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

<!-- <package>

  <description brief="placeDetectionISL">

     placeDetectionISL

  </description>
  <author>Hakan</author>
  <license>BSD</license>
  <review status="unreviewed" notes=""/>
  <url>http://ros.org/wiki/placeDetectionISL</url>
  <depend package="std_msgs"/>
  <depend package="roscpp"/>
  <depend package="rospy"/>
  <depend package="image_transport"/>
  <depend package="opencv2"/>
  <depend package="cv_bridge"/>

</package> -->
